--- a/index.html
+++ b/index.html
@@ -331,16 +331,20 @@
                             </li>
                             <li class="d-flex">
                                 <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
+                                <div class="content"> <h6>איתור חיפוש וחילוץ</h6> <span>הרחבה לנוסע: גיל 10</span> </div>
                             </li>
                             <li class="d-flex">
                                 <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
+                                <div class="content"> <h6>ביטול וקיצור נסיעה מסיבות רפואיות</h6></div>
                             </li>
                             <li class="d-flex">
                                 <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
-                            </li>
+                                <div class="content"> <h6>חבות כלפי צד ג'</h6> </div>
+                            </li>  
+                            <li class="d-flex see-more">
+                                <div><i class="fa-sharp fa-regular fa-chevron-down"></i></div> 
+                                <div class="content"> <h6>הראה עוד</h6> </div>
+                            </li> 
                         </ul>
                     </div>
                 </div>
@@ -348,28 +352,35 @@
                     <div class="fancy-box style1">
                         <div class="item"><img src="assets/img/logo2.png" alt="Icon"></div>
                         <div class="content">
-                            <div class="title">הרחבות ביטוח</div>
-                            <div class="text">הוספת/הסרת הרחבות</div>
+                            <div class="title">תאריכי טיסה</div>
+                            <div class="text">סמנו תאריכי יציאה וחזרה לארץ</div>
                         </div>
                     </div>
                     <div class="checklist">
                         <ul>
                             <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
+                                <label for="exit">יציאה:</label>
+
+                                <select id="exit">
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                </select>
                             </li>
-                            <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
+                            <li class="d-flex mt-2">
+                                <label for="exit">חזרה:</label>
+
+                                <select id="exit">
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                </select>
                             </li>
-                            <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
-                            </li>
-                            <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
-                            </li>
+                            <li class="d-flex"> 
+                                <div class="content"> <span>סה"כ: 1 יום</span> </div>
+                            </li> 
                         </ul>
                     </div>
                 </div>
@@ -377,28 +388,50 @@
                     <div class="fancy-box style1">
                         <div class="item"><img src="assets/img/logo3.png" alt="Icon"></div>
                         <div class="content">
-                            <div class="title">הרחבות ביטוח</div>
-                            <div class="text">הוספת/הסרת הרחבות</div>
+                            <div class="title">לאן נוסעים</div>
+                            <div class="text">בחרו יעד טיסה</div>
                         </div>
                     </div>
                     <div class="checklist">
-                        <ul>
+                        <ul class="single">
                             <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
+                                <div> אוסטרליה <input type="checkbox"> </div>  
                             </li>
                             <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
+                                <div> אוסטרליה <input type="checkbox"> </div>  
+                            </li> 
+                        </ul>
+                        <ul class="single">
+                            <li class="d-flex">
+                                <div> אסיה<input type="checkbox"> </div>  
                             </li>
                             <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
+                                <div> אסיה <input type="checkbox"> </div>  
+                            </li> 
+                        </ul>
+                        <ul class="single">
+                            <li class="d-flex">
+                                <div> אפריקה<input type="checkbox"> </div>  
                             </li>
                             <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
+                                <div> אפריקה<input type="checkbox"> </div>  
+                            </li> 
+                        </ul>
+                        <ul class="single">
+                            <li class="d-flex">
+                                <div>ארה"ב<input type="checkbox"> </div>  
                             </li>
+                            <li class="d-flex">
+                                <div>ארה"ב<input type="checkbox"> </div>  
+                            </li> 
+                        </ul>
+                        <ul class="single">
+                            <li class="d-flex">
+                                <div> קנדה<input type="checkbox"> </div>  
+                            </li>
+                            <li class="d-flex">
+                                <div> קנדה<input type="checkbox"> </div>  
+                            </li> 
                         </ul>
                     </div>
                 </div>
@@ -406,28 +439,35 @@
                     <div class="fancy-box style1">
                         <div class="item"><img src="assets/img/logo4.png" alt="Icon"></div>
                         <div class="content">
-                            <div class="title">הרחבות ביטוח</div>
-                            <div class="text">הוספת/הסרת הרחבות</div>
+                            <div class="title">גילאי הנוסעים</div>
+                            <div class="text">בחרו את גילאי הנוסעים</div>
                         </div>
                     </div>
-                    <div class="checklist">
+                    <div class="checklist"> 
                         <ul>
                             <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
+                                <label for="passenger"><img src="assets/img/cross.png" alt="icon"> גיל נוסע 1</label>
+
+                                <select id="passenger">
+                                <option value="בחירה">בחירה</option> 
+                                <option value="בחירה">בחירה</option> 
+                                <option value="בחירה">בחירה</option> 
+                                <option value="בחירה">בחירה</option> 
+                                </select>
                             </li>
-                            <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
+                            <li class="d-flex mt-2">
+                                <label for="passenger"><img src="assets/img/cross.png" alt="icon"> גיל נוסע 2</label>
+
+                                <select id="passenger"> 
+                                    <option value="בחירה">בחירה</option> 
+                                    <option value="בחירה">בחירה</option> 
+                                    <option value="בחירה">בחירה</option> 
+                                    <option value="בחירה">בחירה</option> 
+                                </select>
                             </li>
-                            <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
-                            </li>
-                            <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
-                            </li>
+                            <li class="d-flex"> 
+                                <div class="content mt-2"> <span class="bg-theme">הוספת נוסע</span> </div>
+                            </li> 
                         </ul>
                     </div>
                 </div>
