--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <div class="offcanvas__overlay"></div>
 
     <!-- Header Section Start -->
-    <header class="header-section-1 fix">
+    <header class="header-section-1 ">
         <div class="container">
             <div id="header-sticky" class="header-1">
                 <div class="container">
@@ -198,63 +198,65 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="header-right d-flex justify-content-end align-items-center">
+                            <div class="header-right d-flex justify-content-end align-items-center fix">
                                 <div class="mean__menu-wrapper">
                                     <div class="main-menu">
                                         <nav id="mobile-menu">
                                             <ul>
                                                 <li>
                                                     <a class="active" href="index.html">
-                                                        Home
+                                                        עמוד הבית
                                                     </a> 
-                                                </li> 
+                                                </li>  
                                                 <li>
-                                                    <a href="about.html">About Us</a>
-                                                </li>
-                                                <li>
-                                                    <a href="causes.html">
-                                                        Causes
+                                                    <a href="about.html">
+                                                        אודותינו
                                                         <i class="fa-regular fa-plus"></i>
                                                     </a>
                                                     <ul class="submenu">
-                                                        <li><a href="causes.html">Causes</a></li>
-                                                        <li><a href="causes-details.html">Causes Details</a></li>
+                                                        <li><a href="about.html">
+                                                            אודותינו</a></li>
+                                                        <li><a href="about-details.html">
+                                                            אודותינו Details</a></li>
                                                     </ul>
                                                 </li>
                                                 <li class="has-dropdown">
                                                     <a href="#">
-                                                        Pages
+                                                        הביטוחים
                                                         <i class="fa-regular fa-plus"></i>
                                                     </a>
                                                     <ul class="submenu">
                                                         <li class="has-dropdown">
-                                                            <a href="team.html">
-                                                                Our Volunteer
+                                                            <a href="insurence.html">
+                                                                הביטוחים
                                                                 <i class="fas fa-angle-down"></i>
                                                             </a>
                                                             <ul class="submenu">
-                                                                <li><a href="team.html">Volunteer</a></li>
-                                                                <li><a href="team-details.html">Volunteer Details</a>
+                                                                <li><a href="insurence.html">
+                                                                    הביטוחים</a></li>
+                                                                <li><a href="insurence-details.html">
+                                                                    הביטוחים </a>
                                                                 </li>
                                                             </ul>
                                                         </li>
-                                                        <li><a href="testimonials.html">Testimonials</a></li>
-                                                        <li><a href="faq.html">Faq's</a></li>
-                                                        <li><a href="error.html">Error Page</a></li>
+                                                        <li><a href="insurence2.html">
+                                                            הביטוחים</a></li> 
                                                     </ul>
                                                 </li>
                                                 <li>
-                                                    <a href="blog.html">
-                                                        Blog
-                                                        <i class="fa-regular fa-plus"></i>
-                                                    </a>
-                                                    <ul class="submenu">
-                                                        <li><a href="blog.html">Blog</a></li>
-                                                        <li><a href="blog-details.html">Blog Details</a></li>
-                                                    </ul>
+                                                    <a href="articles.html">מאמרים   </a> 
                                                 </li>
                                                 <li>
-                                                    <a href="contact.html">Contact Us</a>
+                                                    <a href="emergency-services.html"> שירותי חירום  </a> 
+                                                </li>
+                                                <li>
+                                                    <a href="report.html"> דיווח על תאונה </a> 
+                                                </li>
+                                                <li>
+                                                    <a href="insurence-forum.html"> פורום ביטוח </a> 
+                                                </li>
+                                                <li>
+                                                    <a href="contact.html"> צור קשר</a>
                                                 </li>
                                             </ul>
                                         </nav>
@@ -263,7 +265,7 @@
                                 <a href="#0" class="search-trigger search-icon"><i class="fal fa-search"></i></a>
                                 <div class="header-button">
                                     <div class="btn-wrapper wow fadeInUp" data-wow-delay=".5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
-                                        <a href="causes-details.html"> <span class="theme-btn style3">לחצו להצעה משתלמת<i class="fa-solid fa-phone"></i></a>
+                                        <a href="contact.html"> <span class="theme-btn style3">לחצו להצעה משתלמת<i class="fa-solid fa-phone"></i></a>
                                     </div>
                                 </div>
                                 <div class="header__hamburger d-xl-block my-auto">
