--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
 
     <!-- Breadcumb Section Start -->
-     <div class="breadcumb-section section-padding fix">
+     <div class="breadcumb-section  fix">
         <div class="breadcumb-wrapper bg-img" style="background-image: url(assets/img/bg/breadCumbOverlay.png);">
             <div class="container">
                 <div class="page-heading"> 
@@ -478,7 +478,14 @@
      </div>
 
 
-
+    <!-- Offer Card Section Start -->
+     <div class="offer-card-secttion section-padding fix">
+        <div class="offer-card-wrapper style1">
+            <div class="container">
+                
+            </div>
+        </div>
+     </div>
  
 
     
