--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                                 <a href="#0" class="search-trigger search-icon"><i class="fal fa-search"></i></a>
                                 <div class="header-button">
                                     <div class="btn-wrapper wow fadeInUp" data-wow-delay=".5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
-                                        <a href="contact.html"> <span class="theme-btn style3">לחצו להצעה משתלמת<i class="fa-solid fa-phone"></i></a>
+                                        <a href="contact.html"> <span class="theme-btn">לחצו להצעה משתלמת<i class="fa-solid fa-phone"></i></a>
                                     </div>
                                 </div>
                                 <div class="header__hamburger d-xl-block my-auto">
@@ -480,9 +480,60 @@
 
     <!-- Offer Card Section Start -->
      <div class="offer-card-secttion section-padding fix">
-        <div class="offer-card-wrapper style1">
+        <div class="offer-wrapper style1">
+            <h2 class="text-center mb-75">ההצעות שלנו</h2>
             <div class="container">
-                
+                <div class="offer-card-wrappper style1">
+                    <div class="offer-card style1">
+                        <div class="offer-card-header d-flex justify-content-between align-items-center">
+                            <div class="badge">המומלץ שלנו</div>
+                            <h3><span>סה”כ:</span>19.2$ </h3>
+                            <div class="logo"><img src="assets/img/logo2_1.png" alt="Logo"></div>
+                        </div>
+                        <a class="theme-btn style2" href="#">רכישה אונליין</a>
+                        <a class="theme-btn style3 mt-2" href="#">רכישה עם נציג</a>
+                    </div>
+                    <div class="offer-card style1">
+                        <div class="offer-card-header d-flex justify-content-between align-items-center"> 
+                            <h3><span>סה”כ:</span>19.2$ </h3>
+                            <div class="logo"><img src="assets/img/logo2_2.png" alt="Logo"></div>
+                        </div>
+                        <a class="theme-btn style2" href="#">רכישה אונליין</a>
+                        <a class="theme-btn style3 mt-2" href="#">רכישה עם נציג</a>
+                    </div>
+                    <div class="offer-card style1">
+                        <div class="offer-card-header d-flex justify-content-between align-items-center"> 
+                            <h3><span>סה”כ:</span>19.2$ </h3>
+                            <div class="logo"><img src="assets/img/logo2_3.png" alt="Logo"></div>
+                        </div>
+                        <a class="theme-btn style2" href="#">רכישה אונליין</a>
+                        <a class="theme-btn style3 mt-2" href="#">רכישה עם נציג</a>
+                    </div>
+                    <div class="offer-card style1">
+                        <div class="offer-card-header d-flex justify-content-between align-items-center"> 
+                            <h3><span>סה”כ:</span>19.2$ </h3>
+                            <div class="logo"><img src="assets/img/logo2_1.png" alt="Logo"></div>
+                        </div>
+                        <a class="theme-btn style2" href="#">רכישה אונליין</a>
+                        <a class="theme-btn style3 mt-2" href="#">רכישה עם נציג</a>
+                    </div>
+                    <div class="offer-card style1">
+                        <div class="offer-card-header d-flex justify-content-between align-items-center"> 
+                            <h3><span>סה”כ:</span>19.2$ </h3>
+                            <div class="logo"><img src="assets/img/logo2_2.png" alt="Logo"></div>
+                        </div>
+                        <a class="theme-btn style2" href="#">רכישה אונליין</a>
+                        <a class="theme-btn style3 mt-2" href="#">רכישה עם נציג</a>
+                    </div>
+                    <div class="offer-card style1">
+                        <div class="offer-card-header d-flex justify-content-between align-items-center"> 
+                            <h3><span>סה”כ:</span>19.2$ </h3>
+                            <div class="logo"><img src="assets/img/logo2_3.png" alt="Logo"></div>
+                        </div>
+                        <a class="theme-btn style2" href="#">רכישה אונליין</a>
+                        <a class="theme-btn style3 mt-2" href="#">רכישה עם נציג</a>
+                    </div>
+                </div>
             </div>
         </div>
      </div>
