--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
         <div class="offer-wrapper style1">
             <h2 class="text-center mb-75">ההצעות שלנו</h2>
             <div class="container">
-                <div class="offer-card-wrappper style1">
+                <div class="offer-card-wrapper style1">
                     <div class="offer-card style1">
                         <div class="offer-card-header d-flex justify-content-between align-items-center">
                             <div class="badge">המומלץ שלנו</div>
@@ -495,7 +495,7 @@
                     </div>
                     <div class="offer-card style1">
                         <div class="offer-card-header d-flex justify-content-between align-items-center"> 
-                            <h3><span>סה”כ:</span>19.2$ </h3>
+                            <h3><span>סה”כ:</span>17.2$ </h3>
                             <div class="logo"><img src="assets/img/logo2_2.png" alt="Logo"></div>
                         </div>
                         <a class="theme-btn style2" href="#">רכישה אונליין</a>
@@ -503,7 +503,7 @@
                     </div>
                     <div class="offer-card style1">
                         <div class="offer-card-header d-flex justify-content-between align-items-center"> 
-                            <h3><span>סה”כ:</span>19.2$ </h3>
+                            <h3><span>סה”כ:</span>18.2$ </h3>
                             <div class="logo"><img src="assets/img/logo2_3.png" alt="Logo"></div>
                         </div>
                         <a class="theme-btn style2" href="#">רכישה אונליין</a>
@@ -511,7 +511,7 @@
                     </div>
                     <div class="offer-card style1">
                         <div class="offer-card-header d-flex justify-content-between align-items-center"> 
-                            <h3><span>סה”כ:</span>19.2$ </h3>
+                            <h3><span>סה”כ:</span>17.2$ </h3>
                             <div class="logo"><img src="assets/img/logo2_1.png" alt="Logo"></div>
                         </div>
                         <a class="theme-btn style2" href="#">רכישה אונליין</a>
@@ -519,7 +519,7 @@
                     </div>
                     <div class="offer-card style1">
                         <div class="offer-card-header d-flex justify-content-between align-items-center"> 
-                            <h3><span>סה”כ:</span>19.2$ </h3>
+                            <h3><span>סה”כ:</span>29.2$ </h3>
                             <div class="logo"><img src="assets/img/logo2_2.png" alt="Logo"></div>
                         </div>
                         <a class="theme-btn style2" href="#">רכישה אונליין</a>
