--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="assets/css/responsive.css"> 
 </head>
 
-<body>
+<body dir="rtl">
 
     <!-- Preloader Start -->
     <div id="preloader" class="preloader">
@@ -198,7 +198,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="header-right d-flex justify-content-end align-items-center fix">
+                            <div class="header-right d-flex justify-content-end align-items-center">
                                 <div class="mean__menu-wrapper">
                                     <div class="main-menu">
                                         <nav id="mobile-menu">
@@ -319,69 +319,36 @@
             <div class="service-card-wrapper style1">
                 <div class="service-card style1">
                     <div class="fancy-box style1">
-                        <div class="item"><img src="assets/img/logo1.png" alt="Icon"></div>
+                        <div class="item"><img src="assets/img/logo4.png" alt="Icon"></div>
                         <div class="content">
-                            <div class="title">הרחבות ביטוח</div>
-                            <div class="text">הוספת/הסרת הרחבות</div>
+                            <div class="title">גילאי הנוסעים</div>
+                            <div class="text">בחרו את גילאי הנוסעים</div>
                         </div>
                     </div>
-                    <div class="checklist">
+                    <div class="checklist"> 
                         <ul>
                             <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
-                            </li>
-                            <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>איתור חיפוש וחילוץ</h6> <span>הרחבה לנוסע: גיל 10</span> </div>
-                            </li>
-                            <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>ביטול וקיצור נסיעה מסיבות רפואיות</h6></div>
-                            </li>
-                            <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>חבות כלפי צד ג'</h6> </div>
-                            </li>  
-                            <li class="d-flex see-more">
-                                <div><i class="fa-sharp fa-regular fa-chevron-down"></i></div> 
-                                <div class="content"> <h6>הראה עוד</h6> </div>
-                            </li> 
-                        </ul>
-                    </div>
-                </div>
-                <div class="service-card style1">
-                    <div class="fancy-box style1">
-                        <div class="item"><img src="assets/img/logo2.png" alt="Icon"></div>
-                        <div class="content">
-                            <div class="title">תאריכי טיסה</div>
-                            <div class="text">סמנו תאריכי יציאה וחזרה לארץ</div>
-                        </div>
-                    </div>
-                    <div class="checklist">
-                        <ul>
-                            <li class="d-flex">
-                                <label for="exit">יציאה:</label>
+                                <label for="passenger"><img src="assets/img/cross.png" alt="icon"> גיל נוסע 1</label>
 
-                                <select id="exit">
-                                <option value="בחירת תאריך"> בחירת תאריך</option>
-                                <option value="בחירת תאריך"> בחירת תאריך</option>
-                                <option value="בחירת תאריך"> בחירת תאריך</option>
-                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                <select id="passenger">
+                                <option value="בחירה">בחירה</option> 
+                                <option value="בחירה">בחירה</option> 
+                                <option value="בחירה">בחירה</option> 
+                                <option value="בחירה">בחירה</option> 
                                 </select>
                             </li>
                             <li class="d-flex mt-2">
-                                <label for="exit">חזרה:</label>
+                                <label for="passenger"><img src="assets/img/cross.png" alt="icon"> גיל נוסע 2</label>
 
-                                <select id="exit">
-                                <option value="בחירת תאריך"> בחירת תאריך</option>
-                                <option value="בחירת תאריך"> בחירת תאריך</option>
-                                <option value="בחירת תאריך"> בחירת תאריך</option>
-                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                <select id="passenger"> 
+                                    <option value="בחירה">בחירה</option> 
+                                    <option value="בחירה">בחירה</option> 
+                                    <option value="בחירה">בחירה</option> 
+                                    <option value="בחירה">בחירה</option> 
                                 </select>
                             </li>
                             <li class="d-flex"> 
-                                <div class="content"> <span>סה"כ: 1 יום</span> </div>
+                                <div class="content mt-2"> <span class="bg-theme">הוספת נוסע</span> </div>
                             </li> 
                         </ul>
                     </div>
@@ -439,40 +406,73 @@
                 </div>
                 <div class="service-card style1">
                     <div class="fancy-box style1">
-                        <div class="item"><img src="assets/img/logo4.png" alt="Icon"></div>
+                        <div class="item"><img src="assets/img/logo2.png" alt="Icon"></div>
                         <div class="content">
-                            <div class="title">גילאי הנוסעים</div>
-                            <div class="text">בחרו את גילאי הנוסעים</div>
+                            <div class="title">תאריכי טיסה</div>
+                            <div class="text">סמנו תאריכי יציאה וחזרה לארץ</div>
                         </div>
                     </div>
-                    <div class="checklist"> 
+                    <div class="checklist">
                         <ul>
                             <li class="d-flex">
-                                <label for="passenger"><img src="assets/img/cross.png" alt="icon"> גיל נוסע 1</label>
+                                <label for="exit">יציאה:</label>
 
-                                <select id="passenger">
-                                <option value="בחירה">בחירה</option> 
-                                <option value="בחירה">בחירה</option> 
-                                <option value="בחירה">בחירה</option> 
-                                <option value="בחירה">בחירה</option> 
+                                <select id="exit">
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
                                 </select>
                             </li>
                             <li class="d-flex mt-2">
-                                <label for="passenger"><img src="assets/img/cross.png" alt="icon"> גיל נוסע 2</label>
+                                <label for="exit">חזרה:</label>
 
-                                <select id="passenger"> 
-                                    <option value="בחירה">בחירה</option> 
-                                    <option value="בחירה">בחירה</option> 
-                                    <option value="בחירה">בחירה</option> 
-                                    <option value="בחירה">בחירה</option> 
+                                <select id="exit">
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
+                                <option value="בחירת תאריך"> בחירת תאריך</option>
                                 </select>
                             </li>
                             <li class="d-flex"> 
-                                <div class="content mt-2"> <span class="bg-theme">הוספת נוסע</span> </div>
+                                <div class="content"> <span>סה"כ: 1 יום</span> </div>
                             </li> 
                         </ul>
                     </div>
                 </div>
+                <div class="service-card style1">
+                    <div class="fancy-box style1">
+                        <div class="item"><img src="assets/img/logo1.png" alt="Icon"></div>
+                        <div class="content">
+                            <div class="title">הרחבות ביטוח</div>
+                            <div class="text">הוספת/הסרת הרחבות</div>
+                        </div>
+                    </div>
+                    <div class="checklist">
+                        <ul>
+                            <li class="d-flex">
+                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
+                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
+                            </li>
+                            <li class="d-flex">
+                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
+                                <div class="content"> <h6>איתור חיפוש וחילוץ</h6> <span>הרחבה לנוסע: גיל 10</span> </div>
+                            </li>
+                            <li class="d-flex">
+                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
+                                <div class="content"> <h6>ביטול וקיצור נסיעה מסיבות רפואיות</h6></div>
+                            </li>
+                            <li class="d-flex">
+                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
+                                <div class="content"> <h6>חבות כלפי צד ג'</h6> </div>
+                            </li>  
+                            <li class="d-flex see-more">
+                                <div><i class="fa-sharp fa-regular fa-chevron-down"></i></div> 
+                                <div class="content"> <h6>הראה עוד</h6> </div>
+                            </li> 
+                        </ul>
+                    </div>
+                </div>  
             </div>
         </div>
      </div>
@@ -534,6 +534,8 @@
                         <a class="theme-btn style3 mt-2" href="#">רכישה עם נציג</a>
                     </div>
                 </div>
+
+                <div class="show-more-btn">עוד הצעות <i class="fa-sharp fa-regular fa-chevron-down"></i></div>
             </div>
         </div>
      </div>
