--- a/index.html
+++ b/index.html
@@ -363,43 +363,53 @@
                     </div>
                     <div class="checklist">
                         <ul class="single">
-                            <li class="d-flex">
-                                <div> אוסטרליה <input type="checkbox"> </div>  
+                            <li>
+                                <input type="radio" id="optOne" name="optOne" class="optOne"> 
+                                <label for="optOne"> אוסטרליה </label> 
                             </li>
-                            <li class="d-flex">
-                                <div> אוסטרליה <input type="checkbox"> </div>  
+                            <li> 
+                                <input type="radio" id="optTwo" name="optTwo" class="optTwo"> 
+                                <label for="optTwo"> אוסטרליה </label> 
                             </li> 
                         </ul>
                         <ul class="single">
-                            <li class="d-flex">
-                                <div> אסיה<input type="checkbox"> </div>  
+                            <li>
+                                <input type="radio" id="optThree" name="optThree" class="optThree"> 
+                                <label for="optThree"> אסיה </label>  
                             </li>
-                            <li class="d-flex">
-                                <div> אסיה <input type="checkbox"> </div>  
+                            <li>
+                                <input type="radio" id="optFour" name="optFour" class="optFour"> 
+                                <label for="optFour"> אסיה </label>  
                             </li> 
                         </ul>
                         <ul class="single">
-                            <li class="d-flex">
-                                <div> אפריקה<input type="checkbox"> </div>  
+                            <li>
+                                <input type="radio" id="optSix" name="optSix" class="optSix"> 
+                                <label for="optSix"> אפריקה </label> 
                             </li>
-                            <li class="d-flex">
-                                <div> אפריקה<input type="checkbox"> </div>  
+                            <li>
+                                <input type="radio" id="optSeven" name="optSeven" class="optSeven"> 
+                                <label for="optSeven"> אפריקה </label>  
                             </li> 
                         </ul>
                         <ul class="single">
-                            <li class="d-flex">
-                                <div>ארה"ב<input type="checkbox"> </div>  
+                            <li>
+                                <input type="radio" id="optEight" name="optEight" class="optEight"> 
+                                <label for="optEight"> ארה"ב </label>  
                             </li>
-                            <li class="d-flex">
-                                <div>ארה"ב<input type="checkbox"> </div>  
+                            <li>
+                                <input type="radio" id="optNine" name="optNine" class="optNine"> 
+                                <label for="optNine"> ארה"ב </label>   
                             </li> 
                         </ul>
                         <ul class="single">
-                            <li class="d-flex">
-                                <div> קנדה<input type="checkbox"> </div>  
+                            <li>
+                                <input type="radio" id="optTen" name="optTen" class="optTen"> 
+                                <label for="optTen">קנדה</label>   
                             </li>
-                            <li class="d-flex">
-                                <div> קנדה<input type="checkbox"> </div>  
+                            <li>
+                                <input type="radio" id="optEleven" name="optEleven" class="optEleven"> 
+                                <label for="optEleven">קנדה</label>    
                             </li> 
                         </ul>
                     </div>
@@ -434,7 +444,7 @@
                                 <option value="בחירת תאריך"> בחירת תאריך</option>
                                 </select>
                             </li>
-                            <li class="d-flex"> 
+                            <li class="d-flex mt-2"> 
                                 <div class="content"> <span>סה"כ: 1 יום</span> </div>
                             </li> 
                         </ul>
@@ -451,22 +461,22 @@
                     <div class="checklist">
                         <ul>
                             <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>כיסוי מגן קורונה-הוצאות מיוחדות</h6> <span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
+                                <div> <i class="fa-light fa-circle-question"></i> <input type="radio" id="opt1" name="opt1" class="opt1">  </div> 
+                                <div class="content"> <div> <label for="opt1">כיסוי מגן קורונה-הוצאות מיוחדות</label> </div><span>הרחבה לנוסע: גיל 10 + גיל 15</span> </div>
                             </li>
                             <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>איתור חיפוש וחילוץ</h6> <span>הרחבה לנוסע: גיל 10</span> </div>
+                                <div> <i class="fa-light fa-circle-question"></i><input type="radio" id="opt2" name="opt2" class="opt2">  </div> 
+                                <div class="content"> <div> <label for="opt1">איתור חיפוש וחילוץ</label> </div><span>הרחבה לנוסע: גיל 10</span> </div>
                             </li>
                             <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>ביטול וקיצור נסיעה מסיבות רפואיות</h6></div>
+                                <div> <i class="fa-light fa-circle-question"></i><input type="radio" id="opt3" name="opt3" class="opt3"> </div> 
+                                <div class="content"> <div> <label for="opt1">ביטול וקיצור נסיעה מסיבות רפואיות</label> </div></div>
                             </li>
                             <li class="d-flex">
-                                <div> <i class="fa-light fa-circle-question"></i><input type="checkbox"> </div> 
-                                <div class="content"> <h6>חבות כלפי צד ג'</h6> </div>
+                                <div> <i class="fa-light fa-circle-question"></i><input type="radio" id="opt4" name="opt4" class="opt4"> </div> 
+                                <div class="content"> <div> <label for="opt1">חבות כלפי צד ג'</label> </div></div>
                             </li>  
-                            <li class="d-flex see-more">
+                            <li class="d-flex see-more  mt-2">
                                 <div><i class="fa-sharp fa-regular fa-chevron-down"></i></div> 
                                 <div class="content"> <h6>הראה עוד</h6> </div>
                             </li> 
