--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         </ul>
                         <div class="header-button mt-4">
                             <a href="contact.html" class="theme-btn text-center">
-                                <span>Get A Quote<i class="fa-solid fa-arrow-right-long"></i></span>
+                                <span><i class="fa-solid fa-arrow-right-long"></i>Get A Quote</span>
                             </a>
                         </div>
                         <div class="social-icon d-flex align-items-center">
