--- a/index.html
+++ b/index.html
@@ -22,67 +22,7 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 
-<body dir="rtl">
-
-    <!-- Preloader Start -->
-    <div id="preloader" class="preloader">
-        <div class="animation-preloader">
-            <div class="spinner">
-            </div>
-            <div class="txt-loading">
-                <span data-text-preloader="M" class="letters-loading">
-                    M
-                </span>
-                <span data-text-preloader="A" class="letters-loading">
-                    A
-                </span>
-                <span data-text-preloader="N" class="letters-loading">
-                    N
-                </span>
-                <span data-text-preloader="D" class="letters-loading">
-                    D
-                </span>
-                <span data-text-preloader="Y" class="letters-loading">
-                    Y
-                </span>
-                <span data-text-preloader="G" class="letters-loading">
-                    G
-                </span>
-                <span data-text-preloader="A" class="letters-loading">
-                    A
-                </span>
-                <span data-text-preloader="F" class="letters-loading">
-                    F
-                </span>
-                <span data-text-preloader="N" class="letters-loading">
-                    N
-                </span>
-                <span data-text-preloader="E" class="letters-loading">
-                    E
-                </span>
-                <span data-text-preloader="R" class="letters-loading">
-                    R
-                </span>
-            </div>
-            <p class="text-center">Loading</p>
-        </div>
-        <div class="loader">
-            <div class="row">
-                <div class="col-3 loader-section section-left">
-                    <div class="bg"></div>
-                </div>
-                <div class="col-3 loader-section section-left">
-                    <div class="bg"></div>
-                </div>
-                <div class="col-3 loader-section section-right">
-                    <div class="bg"></div>
-                </div>
-                <div class="col-3 loader-section section-right">
-                    <div class="bg"></div>
-                </div>
-            </div>
-        </div>
-    </div>
+<body dir="rtl"> 
 
     <!-- Mouse Cursor Start -->
     <div class="mouse-cursor cursor-outer"></div>
@@ -228,16 +168,8 @@
                                                     <ul class="submenu">
                                                         <li class="has-dropdown">
                                                             <a href="insurence.html">
-                                                                הביטוחים
-                                                                <i class="fas fa-angle-down"></i>
-                                                            </a>
-                                                            <ul class="submenu">
-                                                                <li><a href="insurence.html">
-                                                                        הביטוחים</a></li>
-                                                                <li><a href="insurence-details.html">
-                                                                        הביטוחים </a>
-                                                                </li>
-                                                            </ul>
+                                                                הביטוחים 
+                                                            </a> 
                                                         </li>
                                                         <li><a href="insurence2.html">
                                                                 הביטוחים</a></li>
@@ -262,15 +194,16 @@
                                         </nav>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="header-right  d-flex justify-content-end align-items-center"> 
                                 <a href="#0" class="search-trigger search-icon"><i class="fal fa-search"></i></a>
                                 <div class="header-button">
-                                    <div class="btn-wrapper wow fadeInUp" data-wow-delay=".5s"
-                                        style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
-                                        <a href="contact.html"> <span class="theme-btn">לחצו להצעה משתלמת<i
-                                                    class="fa-solid fa-phone"></i></a>
+                                    <div class="btn-wrapper">
+                                        <a href="contact.html" class="theme-btn">  <i
+                                                    class="fa-solid fa-phone"></i>לחצו להצעה משתלמת  </a>
                                     </div>
                                 </div>
-                                <div class="header__hamburger d-xl-block my-auto">
+                                <div class="header__hamburger">
                                     <div class="sidebar__toggle">
                                         <i class="fas fa-bars"></i>
                                     </div>
@@ -570,58 +503,50 @@
             </div>
         </div>
     </div>
+ 
 
 
-    <!-- Popup Card Section Start -->
     <div class="popup-card-section section-padding fix">
         <div class="container">
-            <div class="popup-card-wrapper">
-                <div class="card-wrap mb-5">
-                    <h4>(טוליפ הרחבות)</h4>
-                    <div class="popup-card style1 mt-2">  
-                        <div class="img">
-                            <img src="assets/img/cross.png" alt="icon">
-                        </div>
-                        הרחבה זאת נועדה לחובבית ספורט ימי
-                        כאשר ביטוח אקסטרימי כלול בביטוח זה <br><br>
-                        טיפ: כדי לוודא שאכן יש לכם מקום לציוד
-                        הגלישה שלכם, אנא וודאו זאת מול חברת
-                        התעופה
-                    </div>
+          <div class="popup-card-wrapper">
+            <div class="card-wrap mb-5">
+              <h4 class="text-center">(טוליפ הרחבות)</h4>
+              <div class="popup-card style1 mt-2">
+                <div class="img">
+                  <img src="assets/img/cross.png" alt="icon">
                 </div>
-                <div class="card-wrap mt-2">
-                    <h4>(פופאפ הרחבות) </h4>
-                    <div class="popup-card style1 mt-2">
-                        <div class="img">
-                            <img src="assets/img/cross.png" alt="icon">
-                        </div>
-                        <h4>חבות כלפי צד ג’ - עבור:</h4>
-                        <div class="checklist mt-2 mb-5">
-                            <ul>
-                                <li>
-                                    <input type="radio" id="optTen" name="optTen" class="optTen">
-                                    <label for="optTen">נוסע: גיל 15
-                                    </label>
-                                </li>
-                                <li>
-                                    <input type="radio" id="optEleven" name="optEleven" class="optEleven">
-                                    <label for="optEleven">נוסע גיל 10
-                                    </label>
-                                </li>
-                            </ul>
-                        </div>
-                        <span class="bg-theme">הוספת נוסע</span>
-                    </div>
-                </div>
+                <p>
+                  הרחבה זאת נועדה לחובבית ספורט ימי כאשר ביטוח אקסטרימי כלול בביטוח זה <br><br>
+                  <span>טיפ:</span> כדי לוודא שאכן יש לכם מקום לציוד הגלישה שלכם, אנא וודאו זאת מול חברת התעופה
+                </p>
+              </div>
             </div>
-
+            <div class="card-wrap">
+              <h4 class="text-center">(פופאפ הרחבות)</h4>
+              <div class="popup-card style1 mt-2">
+                <div class="img">
+                  <img src="assets/img/cross.png" alt="icon">
+                </div>
+                <h4>חבות כלפי צד ג’ - עבור:</h4>
+                <div class="checklist mt-2 mb-5">
+                  <ul>
+                    <li>
+                      <input type="radio" id="optTen" name="optTen" class="optTen">
+                      <label for="optTen">נוסע: גיל 15</label>
+                    </li>
+                    <li>
+                      <input type="radio" id="optEleven" name="optEleven" class="optEleven">
+                      <label for="optEleven">נוסע גיל 10</label>
+                    </li>
+                  </ul>
+                </div>
+                <span class="bg-theme">הוספת נוסע</span>
+              </div>
+            </div>
+          </div>
         </div>
-    </div>
-</div>
-    
-
-
-
+      </div>
+      
 
 
 
